workloads/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: media
  labels:
    app: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:2021.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8123
          protocol: TCP
        volumeMounts:
        - name: home-assistant-config
          mountPath: "/config"
      volumes:
      - name: home-assistant-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-home-assistant-config
