workloads/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 8123
    protocol: TCP
    name: http
  selector:
    app: home-assistant
