workloads/home-assistant/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant-network-policy
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx-ingress
